minio/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: opa
spec:
  selector:
    app: minio
  ports:
    - name: api
      protocol: TCP
      port: 9000
      targetPort: 9000
    - name: console
      protocol: TCP
      port: 9001
      targetPort: 9001
  type: ClusterIP
